<resources>
    <string name="app_name">作業四之一:黃俊維</string>
    <string name="sex">性別</string>
    <string name="age">年齡</string>
    <string-array name="ageRange_list">
        <item>男 : 小於30歲;女 : 小於28歲</item>
        <item>男 : 30到40歲;女 : 28到35歲</item>
        <item>男 : 大於40歲;女 : 大於35歲</item>
    </string-array>
    <string name="maleAgeRange1">小於30歲</string>
    <string name="maleAgeRange2">30~40歲</string>
    <string name="maleAgeRange3">大於40歲</string>
    <string name="femaleAgeRange1">小於28歲</string>
    <string name="femaleAgeRange2">28~35歲</string>
    <string name="femaleAgeRange3">大於35歲</string>
    <string name="btnOK">確定</string>
    <string name="suggestion">建議:</string>
    <string-array name="sex_list">
        <item>male</item>
        <item>female</item>
    </string-array>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sug_not_hurry">還不急</string>
    <string name="sug_find_couple">開始找對象</string>
    <string name="sug_get_married">趕快結婚</string>
    <string name="spn_sex_list_promt">請選擇性別</string>
    <string name="family">家人數量</string>
    <string name="number">預設為3</string>

    <string name="yourSug">你的興趣</string>

    <string name="music">音樂</string>
    <string name="sing">唱歌</string>
    <string name="dance">跳舞</string>
    <string name="travel">旅行</string>
    <string name="reading">閱讀</string>
    <string name="writing">寫作</string>
    <string name="climbing">爬山</string>
    <string name="swim">游泳</string>
    <string name="eating">美食</string>
    <string name="drawing">繪畫</string>
</resources>
