<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="edu.ntut.user.myhw3.MainActivity">

    <TextView
        android:id="@+id/txtSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        android:textSize="18sp" />
<!--
    <Spinner
        android:id="@+id/spnSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/sex_list"
        android:prompt="@string/spn_sex_list_promt"
        android:spinnerMode="dialog" />
-->
    <RadioGroup
        android:id="@+id/radSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radBtnMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radBtnFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female" />

    </RadioGroup>

    <TextView
        android:id="@+id/txtAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radGrpAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radBtnAgeRange1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/maleAgeRange1" />

        <RadioButton
            android:id="@+id/radBtnAgeRange2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/maleAgeRange2" />

        <RadioButton
            android:id="@+id/radBtnAgeRange3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/maleAgeRange3" />

    </RadioGroup>

    <Spinner
        android:id="@+id/spnAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/ageRange_list" />

    <TextView
        android:id="@+id/txtNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/family"
        tools:textSize="18sp" />

    <TextView
        android:id="@+id/txtNumFamily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number" />

    <NumberPicker
        android:id="@+id/numPkrFamily"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="興趣:"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/che1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/music"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/che2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sing"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/che3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dance"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/che4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/travel"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/che5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reading"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/che6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/writing"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/che7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/climbing"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/che8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/swim"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/che9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eating"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/che10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/drawing"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnOK"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtSug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suggestion"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtHob"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/yourSug"
        android:textSize="25sp" />

</LinearLayout>

</ScrollView>